appId: ${APP_ID}
name: CT05 - Adicionar produto ao cesto
tags:
  - product:failure
  - smoke
  - regression
env:
  PRODUCT_CODE: HQS60NKHM

---
- runFlow:
    file: CT05_AddProductToCartSuccess.yaml
    label: Incluindo o primeiro item do produto.
    env:
      INPUT_EMAIL: ${EMAIL}
      INPUT_PASSWORD: ${PASSWORD}

- doubleTapOn:
    label: Voltando a tela inicial.
    id: Voltar
    delay: 3000

- repeat:
    times: 3
    commands:
      - pressKey: back

- tapOn:
    label: Clicando no botão "Home".
    id: home

- runFlow:
    file: ../../helpers/searchProductHelper.yaml
    env:
      PRODUCT_CODE: ${PRODUCT_CODE}

- tapOn:
    label: Clicando no produto.
    text: '.*${PRODUCT_CODE}.*'

- tapOn:
    id: Comprar agora

- tapOn:
    label: Clicando em "adicionar e continuar comprando".
    id: adicionar e continuar comprando

- tapOn:
    label: Acessando a cesta de compras.
    id: Carrinho

- assertVisible:
    id: Card Produto

- assertVisible:
    label: O produto está visível na cesta.
    text: '.*${PRODUCT_CODE}.*'

- tapOn:
    above:
      id: Card Produto
    containsDescendants:
      - text: '2'

- assertVisible:
    label: O pedido pode ser fechado.
    id: Fechar pedido
